# rule-set

./: .gitignore  README.md  format.py  index.html  pyproject.toml
Clash/: AI.yaml  Anti-ad.yaml  Apple_cdn.yaml  Apple_cn.yaml  Apple_services.yaml  Domestic.yaml  Dropbox.yaml  ExHentai.yaml  Game.yaml  GameDownload.yaml  GameDownloadCN.yaml  Global.domain.yaml  Global.yaml  Lan.yaml  Microsoft.yaml  Microsoft_cdn.yaml  OneDrive.yaml  OpenAI.yaml  Privacy.domain.yaml  Privacy.yaml  Proxy.yaml  ProxyLite.yaml  Speedtest.yaml  Steam.yaml  Sukka-ad-reject-drop.yaml  Sukka-ad.domain.yaml  Sukka-ad.yaml  Telegram.yaml  ai.yaml  dropbox.yaml  telegram.yaml
Egern/: AI.yaml  Anti-ad.yaml  Apple_cdn.yaml  Apple_cn.yaml  Apple_services.yaml  CN-IP2Location.yaml  CN-IPinfo.yaml  CN-MMDBChinaIPList.yaml  CN-Sukka.yaml  CN.yaml  Cats-ad.yaml  Domestic.yaml  Dropbox.yaml  ExHentai.yaml  GFW.yaml  Game.yaml  GameCN.yaml  GameDownload.yaml  GameDownloadCN.yaml  Global.yaml  Lan.yaml  Microsoft.yaml  Microsoft_cdn.yaml  OneDrive.yaml  OpenAI.yaml  Privacy.yaml  Proxy.yaml  ProxyLite.yaml  Reddit.yaml  Speedtest.yaml  Steam.yaml  SteamCN.yaml  Sukka-ad-extra.yaml  Sukka-ad.yaml  Telegram.yaml  direct.yaml  lan.yaml
Loon/: AI.list  Anti-ad.list  Apple_cdn.list  Apple_services.list  CN-IP2Location.list  CN-IPinfo.list  CN-Sukka.list  CN.list  Cats-ad.list  Domestic.list  ExHentai.list  GFW.list  Game.list  GameCN.list  GameDownload.list  Global.list  Lan.list  Microsoft.list  Microsoft_cdn.list  OpenAI.list  Privacy.list  Proxy.list  ProxyLite.list  Speedtest.list  Steam.list  Sukka-ad-extra.list  Sukka-ad-reject-drop.list  Sukka-ad-reject-no-drop.list  Sukka-ad.list  Telegram.list  reddit.list
Surge/: Anti-ad.list  Apple_cdn.list  Apple_cn.list  Apple_services.list  CN-IP2Location.list  CN-IPinfo.list  CN-Sukka.list  CN.list  Cats-ad.list  Domestic.list  GFW.list  Game.list  GameDownload.list  GameDownloadCN.list  Global.list  Lan.list  Microsoft.list  Microsoft_cdn.list  OneDrive.list  OpenAI.list  Privacy.list  Proxy.list  ProxyLite.list  Speedtest.list  Sukka-ad-extra.list  Sukka-ad-reject-drop.list  Sukka-ad-reject-no-drop.list  Sukka-ad.list  Telegram.list  lan.list
clash/: ai.yaml  anime.yaml  cdn.yaml  direct.yaml  download.yaml  dropbox.yaml  global.yaml  index.html  lan.yaml  telegram.yaml
egern/: ai.yaml  anime.yaml  cdn.yaml  dev.yaml  direct.yaml  download.yaml  dropbox.yaml  e-hentai.yaml  exhentai.yaml  global-all.yaml  global.yaml  index.html  lan.yaml  reddit.yaml  speedtest.yaml  telegram.yaml
geoip/: index.html
loon/: ai.list  anime.list  cdn.list  dev.list  direct.list  download.list  dropbox.list  e-hentai.list  global-all.list  global.list  index.html  lan.list  speedtest.list  telegram.list
my-rules/: direct.txt  proxy.txt  reject-drop.txt  reject.txt
rule-set/: index.html
sing-box/: AI.json  AI.srs  Anti-ad.json  Anti-ad.srs  Apple_cdn.json  Apple_cdn.srs  Apple_cn.json  CN.json  (+84 more)
(+739 files in other folders)
