[project]
name = "rule-set"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "anytree>=2.13.0",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "maxminddb>=2.8.2",
    "protobuf>=6.31.1",
    "pyahocorasick>=2.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pygtrie>=2.5.0",
    "pytricia>=1.2.0",
    "pyyaml>=6.0.2",
    "tldextract>=5.3.0",
    "validators>=0.35.0",
]

[project.scripts]
"rule-set" = "rule_set:main"
"logical" = "deserialize:print_rule_tree"
"format" = "format:main"


[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
