[project]
name = "rule-set"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "maxminddb>=2.8.2",
    "protobuf>=6.31.1",
    "pyahocorasick>=2.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pygtrie>=2.5.0",
    "pytricia>=1.2.0",
    "pyyaml>=6.0.2",
    "tldextract>=5.3.0",
    "typer>=0.17.3",
    "validators>=0.35.0",
]

[project.scripts]
"rule-set" = "rule_set.__main__:main"
"logic" = "rule_set.parsers.logic:print_rule_tree"
"format" = "rule_set.format:main"
"gen-pages" = "rule_set.pages.cli:main"


[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]

ignore = [
    "E501", # line too long
]


[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "typer.Option",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
